Hello1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\paimon.gou.LSD_DO\Documents\BluJ Projects\Hello1
-d
C:\Users\paimon.gou.LSD_DO\Documents\BluJ Projects\Hello1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\paimon.gou.LSD_DO\Documents\BluJ Projects\Hello1\HighLow.java
<---- end of javadoc command ---->
Loading source file C:\Users\paimon.gou.LSD_DO\Documents\BluJ Projects\Hello1\HighLow.java...
C:\Users\paimon.gou.LSD_DO\Documents\BluJ Projects\Hello1\HighLow.java:5: error: ';' expected
    double user = JOptionPane.showInputDdfodo
                                             ^
1 error
